# InterpreterLoopNew

./: CMakeLists.txt  executor.c  loader.c  result.txt  tokenReader.c  utilities.c  variables.c  vars.txt
headers/: executor.h  loader.h  tokenReader.h  utilities.h
